Wired up submit button. Need to fix bug for file list/rename field